# openApi/generated/dashboard-swagger20.json
@@ -5,7 +5,7 @@
     "title": "selc-dashboard",
     "version": "0.0.1-SNAPSHOT"
   },
-  "host": "localhost:8080",
+  "host": "localhost:80",
   "basePath": "%7BbasePath%7D",
   "schemes": [
     "http"
@@ -639,6 +639,146 @@
         "summary": "getInstitutionUser"
       }
     },
+    "/onboarding-requests/{tokenId}": {
+      "get": {
+        "produces": [
+          "application/json",
+          "application/problem+json"
+        ],
+        "parameters": [
+          {
+            "description": "Onboarding request's unique identifier",
+            "format": "uuid",
+            "in": "path",
+            "name": "tokenId",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/OnboardingRequestResource"
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "$ref": "#/definitions/Problem"
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "schema": {
+              "$ref": "#/definitions/Problem"
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "schema": {
+              "$ref": "#/definitions/Problem"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "$ref": "#/definitions/Problem"
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": [
+              "global"
+            ]
+          }
+        ],
+        "tags": [
+          "onboarding"
+        ],
+        "description": "Service to retrieve a specific onboarding request",
+        "operationId": "retrieveOnboardingRequestUsingGET",
+        "summary": "retrieveOnboardingRequest"
+      }
+    },
+    "/products/{productId}/back-office": {
+      "get": {
+        "produces": [
+          "application/json",
+          "application/problem+json"
+        ],
+        "parameters": [
+          {
+            "description": "Product's unique identifier",
+            "in": "path",
+            "name": "productId",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "description": "Institution's unique internal identifier",
+            "in": "query",
+            "name": "institutionId",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "description": "Back Office environment",
+            "in": "query",
+            "name": "environment",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "format": "uri",
+              "type": "string"
+            }
+          },
+          "400": {
+            "description": "Bad Request",
+            "schema": {
+              "$ref": "#/definitions/Problem"
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "schema": {
+              "$ref": "#/definitions/Problem"
+            }
+          },
+          "404": {
+            "description": "Not Found",
+            "schema": {
+              "$ref": "#/definitions/Problem"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "$ref": "#/definitions/Problem"
+            }
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": [
+              "global"
+            ]
+          }
+        ],
+        "tags": [
+          "products"
+        ],
+        "description": "Service to trigger token exchange and redirect to product's back office URL",
+        "operationId": "retrieveProductBackofficeUsingGET",
+        "summary": "retrieveProductBackoffice"
+      }
+    },
     "/products/{productId}/roles": {
       "get": {
         "produces": [
@@ -874,6 +1014,13 @@
             "in": "query",
             "name": "productId",
             "required": true,
+            "type": "string"
+          },
+          {
+            "description": "Back Office environment",
+            "in": "query",
+            "name": "environment",
+            "required": false,
             "type": "string"
           }
         ],
@@ -1825,6 +1972,24 @@
     }
   },
   "definitions" : {"ProductRoleMappingsResourceArray":{"type": "array", "items": {"$ref": "#/definitions/ProductRoleMappingsResource"}},"InstitutionUserResourceArray":{"type": "array", "items": {"$ref": "#/definitions/InstitutionUserResource"}},"ProductUserResourceArray":{"type": "array", "items": {"$ref": "#/definitions/ProductUserResource"}},"ProductsResourceArray":{"type": "array", "items": {"$ref": "#/definitions/ProductsResource"}},"STRINGWrapper":{"type": "string"},"STRINGArray":{"type": "array", "items": {"type": "string"}},"InstitutionResourceArray":{"type": "array", "items": {"$ref": "#/definitions/InstitutionResource"}},
+    "BackOfficeConfigurationsResource": {
+      "properties": {
+        "environment": {
+          "description": "Back Office environment",
+          "type": "string"
+        },
+        "url": {
+          "description": "URL that redirects to the back-office section, where is possible to manage the product",
+          "type": "string"
+        }
+      },
+      "required": [
+        "environment",
+        "url"
+      ],
+      "title": "BackOfficeConfigurationsResource",
+      "type": "object"
+    },
     "CertifiedFieldResourceOfstring": {
       "properties": {
         "certified": {
@@ -1918,6 +2083,33 @@
       "title": "CreateUserGroupDto",
       "type": "object"
     },
+    "DpoData": {
+      "properties": {
+        "address": {
+          "description": "DPO's address",
+          "type": "string"
+        },
+        "email": {
+          "description": "DPO's email",
+          "example": "email@example.com",
+          "format": "email",
+          "type": "string"
+        },
+        "pec": {
+          "description": "DPO's PEC",
+          "example": "email@example.com",
+          "format": "email",
+          "type": "string"
+        }
+      },
+      "required": [
+        "address",
+        "email",
+        "pec"
+      ],
+      "title": "DpoData",
+      "type": "object"
+    },
     "IdentityTokenResource": {
       "properties": {
         "token": {
@@ -1929,6 +2121,75 @@
         "token"
       ],
       "title": "IdentityTokenResource",
+      "type": "object"
+    },
+    "InstitutionInfo": {
+      "properties": {
+        "address": {
+          "description": "Institution's physical address",
+          "type": "string"
+        },
+        "dpoData": {
+          "$ref": "#/definitions/DpoData",
+          "description": "Data Protection Officer (DPO) specific data"
+        },
+        "fiscalCode": {
+          "description": "Fiscal code corresponding to the institution",
+          "type": "string"
+        },
+        "id": {
+          "description": "Institution's unique internal identifier",
+          "type": "string"
+        },
+        "institutionType": {
+          "description": "Institution's type",
+          "enum": [
+            "GSP",
+            "PA",
+            "PSP",
+            "PT",
+            "SCP"
+          ],
+          "type": "string"
+        },
+        "mailAddress": {
+          "description": "Institution's email address",
+          "example": "email@example.com",
+          "format": "email",
+          "type": "string"
+        },
+        "name": {
+          "description": "Institution's name",
+          "type": "string"
+        },
+        "pspData": {
+          "$ref": "#/definitions/PspData",
+          "description": "Payment Service Provider (PSP) specific data"
+        },
+        "recipientCode": {
+          "description": "Billing recipient code",
+          "type": "string"
+        },
+        "vatNumber": {
+          "description": "Institution's VAT number",
+          "type": "string"
+        },
+        "zipCode": {
+          "description": "Institution's zipCode",
+          "type": "string"
+        }
+      },
+      "required": [
+        "address",
+        "fiscalCode",
+        "id",
+        "mailAddress",
+        "name",
+        "recipientCode",
+        "vatNumber",
+        "zipCode"
+      ],
+      "title": "InstitutionInfo",
       "type": "object"
     },
     "InstitutionResource": {
@@ -1958,6 +2219,7 @@
           "enum": [
             "GSP",
             "PA",
+            "PSP",
             "PT",
             "SCP"
           ],
@@ -2130,6 +2392,45 @@
         "reason"
       ],
       "title": "InvalidParam",
+      "type": "object"
+    },
+    "OnboardingRequestResource": {
+      "properties": {
+        "admins": {
+          "description": "Administrators specific data",
+          "items": {
+            "$ref": "#/definitions/UserInfo"
+          },
+          "type": "array"
+        },
+        "institutionInfo": {
+          "$ref": "#/definitions/InstitutionInfo",
+          "description": "Institution specific data"
+        },
+        "manager": {
+          "$ref": "#/definitions/UserInfo",
+          "description": "Manager specific data"
+        },
+        "status": {
+          "description": "Onboarding request's status",
+          "enum": [
+            "ACTIVE",
+            "DELETED",
+            "PENDING",
+            "REJECTED",
+            "SUSPENDED",
+            "TOBEVALIDATED"
+          ],
+          "type": "string"
+        }
+      },
+      "required": [
+        "admins",
+        "institutionInfo",
+        "manager",
+        "status"
+      ],
+      "title": "OnboardingRequestResource",
       "type": "object"
     },
     "PageOfUserGroupPlainResource": {
@@ -2420,6 +2721,13 @@
           "example": false,
           "type": "boolean"
         },
+        "backOfficeEnvironmentConfigurations": {
+          "description": "Environment-specific configurations for back-office redirection with Token Exchange",
+          "items": {
+            "$ref": "#/definitions/BackOfficeConfigurationsResource"
+          },
+          "type": "array"
+        },
         "children": {
           "description": "Product's sub products list",
           "items": {
@@ -2485,6 +2793,40 @@
         "urlBO"
       ],
       "title": "ProductsResource",
+      "type": "object"
+    },
+    "PspData": {
+      "properties": {
+        "abiCode": {
+          "description": "PSP's ABI code",
+          "type": "string"
+        },
+        "businessRegisterNumber": {
+          "description": "PSP's Business Register number",
+          "type": "string"
+        },
+        "legalRegisterName": {
+          "description": "PSP's legal register name",
+          "type": "string"
+        },
+        "legalRegisterNumber": {
+          "description": "PSP's legal register number",
+          "type": "string"
+        },
+        "vatNumberGroup": {
+          "description": "PSP's Vat Number group",
+          "example": false,
+          "type": "boolean"
+        }
+      },
+      "required": [
+        "abiCode",
+        "businessRegisterNumber",
+        "legalRegisterName",
+        "legalRegisterNumber",
+        "vatNumberGroup"
+      ],
+      "title": "PspData",
       "type": "object"
     },
     "SearchUserDto": {
@@ -2769,6 +3111,42 @@
       "title": "UserIdResource",
       "type": "object"
     },
+    "UserInfo": {
+      "properties": {
+        "email": {
+          "description": "User's institutional email",
+          "example": "email@example.com",
+          "format": "email",
+          "type": "string"
+        },
+        "fiscalCode": {
+          "description": "User's fiscal code",
+          "type": "string"
+        },
+        "id": {
+          "description": "User's unique identifier",
+          "format": "uuid",
+          "type": "string"
+        },
+        "name": {
+          "description": "User's name",
+          "type": "string"
+        },
+        "surname": {
+          "description": "User's surname",
+          "type": "string"
+        }
+      },
+      "required": [
+        "email",
+        "fiscalCode",
+        "id",
+        "name",
+        "surname"
+      ],
+      "title": "UserInfo",
+      "type": "object"
+    },
     "UserProductRoles": {
       "properties": {
         "productRoles": {
@@ -2826,6 +3204,10 @@
     {
       "description": "Institution operations",
       "name": "institutions"
+    },
+    {
+      "description": "Onboarding operations",
+      "name": "onboarding"
     },
     {
       "description": "Products operations",
